--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.hibernate.ddl-auto=create
 ## JWT
 jwt.token.secret=mysecretword1234567890
 jwt.token.expired=180000000
+
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.nick.software.link.linkedin=INFO
+
+# output to a file
+logging.file=app.log
+
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
